--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,13 +4,33 @@ android {
     compileSdkVersion 23
     buildToolsVersion "23.0.1"
 
-    defaultConfig {
-        applicationId "es.coru.andiag.seriesbook"
-        minSdkVersion 16
-        targetSdkVersion 23
-        versionCode 1
-        versionName "1.0"
+    productFlavors {
+        lite {
+            applicationId 'es.coru.andiag.seriesbook'
+            resValue "string", "app_name", "SeriesBook (Lite)"
+            minSdkVersion 16
+            targetSdkVersion 23
+            versionCode 1
+            versionName "0.1"
+        }
+        pro {
+            applicationId 'es.coru.andiag.seriesbook'
+            resValue "string", "app_name", "SeriesBook"
+            minSdkVersion 16
+            targetSdkVersion 23
+            versionCode 1
+            versionName "0.1"
+        }
     }
+
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -24,4 +44,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
+    compile 'com.android.support:support-v4:23.1.1'
+    compile 'com.android.support:cardview-v7:23.1.1'
 }
