--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     compile 'com.android.support:design:23.1.1'
     compile 'com.android.support:support-v4:23.2.0'
     compile 'com.android.support:cardview-v7:23.2.0'
+    compile 'jp.wasabeef:recyclerview-animators:1.3.0'
     compile('com.mikepenz:materialdrawer:5.0.4@aar') {
         transitive = true
     }
